# animetrace

./: pyproject.toml
src/animetrace/: __init__.py
src/animetrace/api/: search.py
src/animetrace/cli/: __init__.py
